@@ -5,7 +5,8 @@ url-map = svn\+ssh://svn\.mandriva\.com/(.*) file:///\1
 #tempdir = /tmp
 ## the command used to download files when using repsys sync -d
 #download-command = wget -c -O '$dest' $url
-
+svn-env = SVN_SSH=/home/me/my-ssh-wrapper
+	SVN_FOO=bar
 
 [log]
 oldurl = svn+ssh://svn.mandriva.com/svn/packages/misc
