@@ -1,0 +1,2 @@
+#!/bin/sh
+ssh -o "BatchMode yes" $*
